tests/error/unended_cast_to_function.c
// fail "Expected a type."

int main(){
  return (float(
}

